[tool.poetry]
name = "slack-img-scraper"
version = "0.1.0"
description = "Slack bot to archive all images and upload them to s3"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/leohemsted/slack-img-scraper"
repository = "https://github.com/leohemsted/slack-img-scraper"
keywords = ["slack"]
authors = ["Leo Hemsted <leohemsted@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
slack-sdk = "^3.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
