[tool.poetry]
name = "slack-img-scraper"
version = "0.1.0"
description = "Slack bot to archive all images and upload them to s3"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/leohemsted/slack-img-scraper"
repository = "https://github.com/leohemsted/slack-img-scraper"
keywords = ["slack"]
authors = ["Leo Hemsted <leohemsted@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
slack-sdk = "^3.11.2"
httpx = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"
flake8-bugbear = "^21.9.1"
black = "^21.9b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
